# abd_akasha

./: .gitignore  README.md
Win32Akasha/: BuildConfig.hpp.in  CMakeLists.txt  default.rcd  readme.txt  setting.xml
Win32Akasha/AkashaApplication/: AkashaApplication.cpp  AkashaApplication.h  Instantiater.hpp  SoundManager.hpp  TemplateVTBL_Ex_MacroClear.hpp  TemplateVTBL_Ex_MacroLoad.hpp  TemplateVTBL_MacroClear.hpp  TemplateVTBL_MacroLoad.hpp  resourceEntity.h
Win32Akasha/AkashaApplication/lua/: LuaEnvironment.hpp  luabindExConverter.hpp
Win32Akasha/AkashaApplication/net/: FrontEnd.hpp  Network.cpp  Network.hpp
Win32Akasha/AkashaApplication/network/: CommunicateData.hpp  UDP_connection.hpp  WorldData.hpp  connection.hpp  utily.hpp
Win32Akasha/AkashaApplication/network/client/: Client.h
Win32Akasha/AkashaApplication/network/server/: STUN_Observer.hpp  Server.h
Win32Akasha/AkashaSystem/: AkashaLogger.hpp  AkashaSystem.cpp  AkashaSystem.hpp  InputInterface.hpp  SystemConstant.cpp  SystemConstant.hpp
Win32Akasha/AkashaWorld/: AkashaWorld.cpp  AkashaWorld.h  AkashaWorld_1.cpp  BulletExtention.h  BulletWorldManager.h  IrrExtention.h  LuaUtility.h  PlayerView.cpp  PlayerView.hpp  RenderType.hpp  WispTasks.hpp  WorldCommand.hpp  akashaWorldCommon.h  akashaWorldType.h  btIrrDebugDraw.cpp  btIrrDebugDraw.h
Win32Akasha/AkashaWorld/Receptor/: LandReceptor.hpp  Receptors.hpp
Win32Akasha/AkashaWorld/Toy/: Toy.hpp
Win32Akasha/AkashaWorld/avatar/: AvatarBase.hpp
Win32Akasha/AkashaWorld/bullet/: ConstraintHelper.hpp  ConstraintWrapper.hpp  CustumCallbackHolder.hpp  HfFluidDynamics.hpp  ObjectOption.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  btFractureBody.hpp  btFractureDynamicsWorld.hpp  btFractureWelding.hpp  btProfileDump.hpp  btio.hpp
Win32Akasha/AkashaWorld/bullet/fluidDynamics/: btHfFluidRigidCollisionConfiguration.cpp  btHfFluidRigidCollisionConfiguration.h
Win32Akasha/AkashaWorld/bullet/fluidDynamics/algorithm/: btFluidBodyCollisionAlgorithm.cpp  btFluidBodyCollisionAlgorithm.hpp
Win32Akasha/AkashaWorld/bullet/fluidDynamics/buoyant/: BuoyantAuthoizer.cpp  BuoyantAuthoizer.hpp  BuoyantParameter.hpp
Win32Akasha/AkashaWorld/bullet/fluidDynamics/fluid/: btHfFluid.cpp  btHfFluid.h  btHfFluidCollisionShape.cpp  btHfFluidCollisionShape.h
Win32Akasha/AkashaWorld/contactEvent/: ContactEventManager.hpp  EventGroup.hpp
Win32Akasha/AkashaWorld/convert/: ConvertFunction.hpp  ConvertImpl_Bullet_Irrlicht.hpp  ConvertImpl_Bullet_X3D.hpp  ConvertImpl_narowchar_widechar.hpp  ConvertMPL.hpp  ConvertMeshBuffer.hpp  Convert_Irrlicht_X3D.hpp
Win32Akasha/AkashaWorld/detection/: DetectionWorld.hpp  ObjectCapture.hpp  ShotBase.hpp
Win32Akasha/AkashaWorld/detection/figuer/: BeamFiguer.cpp  BeamFiguer.hpp
Win32Akasha/AkashaWorld/effect/: SmorkEffect.cpp  SmorkEffect.hpp
Win32Akasha/AkashaWorld/entity/: EntityReceptor.hpp
Win32Akasha/AkashaWorld/environment/: EnvironmentLand.cpp  EnvironmentLand.hpp  LandWater.hpp  Landform.hpp
Win32Akasha/AkashaWorld/model/: ElementModel.cpp  ElementModel.hpp  EnergyLinkGraph.cpp  EnergyLinkGraph.hpp  ModelConnectGraph.cpp  ModelConnectGraph.hpp  ModelControlKey.hpp  ModelLuaConstract.hpp  ModelLuaEnvironment.cpp  ModelLuaEnvironment.hpp  ModelObserver.hpp  ModelValue.hpp  ValueManifold.hpp
Win32Akasha/AkashaWorld/model/bridgeLink/: BridgeLink.cpp  BridgeLink.hpp
Win32Akasha/AkashaWorld/model/builder/: BtShapeBuilder.cpp  BtShapeBuilder.hpp  ControlKeyBuilder.hpp  ElementChunkBuilder.cpp  ElementChunkBuilder.hpp  ElementDataBuilder.hpp  UserValueBuilder.hpp  ValueManifoldBuilder.hpp
Win32Akasha/AkashaWorld/model/element/: ConnectType.hpp  ElementData.hpp
Win32Akasha/AkashaWorld/model/element/energy/: GearAssemblyBuilder.hpp  Harnnes.hpp  LinkType.hpp  TractionLink.hpp
Win32Akasha/AkashaWorld/model/element/figuer/: BasicElementFiguer.cpp  BasicElementFiguer.hpp
Win32Akasha/AkashaWorld/model/element_v2/: BasicChipElement.ipp  BatteryElement.ipp  CreateInfo.hpp  ElementBuffer.cpp  ElementBuffer.hpp  ElementConcept.hpp  LegacyElement.hpp  UndefineElement.ipp  VoidAdapterElement.ipp  type_fwd.hpp
Win32Akasha/AkashaWorld/model/element_v2/behavior/: AdapterFiguerBehavior.hpp  BatteryBehavior.hpp  EnergyConductBehavior.hpp  EnergyExchangeBehavior.hpp  FlexibleJointBehavior.cpp  FlexibleJointBehavior.hpp  JetThrustBehavior.hpp  PhysicsBehavior.cpp  PhysicsBehavior.hpp  TractionJointBehavior.cpp  TractionJointBehavior.hpp
Win32Akasha/AkashaWorld/model/element_v2/behavior/detail/: EnergyExcahgeImpl.hpp
Win32Akasha/AkashaWorld/model/element_v2/detail/: AdapterParameter.hpp  ElementBase.hpp  ElementParameter.cpp  ElementParameter.hpp
Win32Akasha/AkashaWorld/model/element_v2/direct/: ConnectType.hpp  DefineParameter.hpp  direct_define.hpp
Win32Akasha/AkashaWorld/model/element_v2/event/: event.hpp
Win32Akasha/AkashaWorld/model/energy/: EnergyManager.hpp  EnergyPortMap.hpp  EnergyType.hpp  EretnicManager.hpp  EretnicSocket.hpp
Win32Akasha/AkashaWorld/model/fluidDynamics/: fluidDynamics.hpp
Win32Akasha/AkashaWorld/model/loader/: RCFileLoader.cpp  RCFileLoader.hpp
Win32Akasha/AkashaWorld/model/loader/define/: FusionAdapt.hpp  ModelDefineStruct.hpp
Win32Akasha/AkashaWorld/model/loader/parser/: BlockSplitGrammar.hpp  BodyBlockGrammar.hpp  ExpressionGrammar.hpp  KeyBlockGrammar.hpp  ValBlockGrammar.hpp  annotation.hpp  commentSkipper.hpp
Win32Akasha/AkashaWorld/other/: OtherElementModel.hpp
Win32Akasha/AkashaWorld/units/: units.hpp
Win32Akasha/Data/: 4wd.txt  LongLong.rcd  Suspention.rcd  chipStabirity.rcd  springtest.rcd
Win32Akasha/src/: AkashaFrames.h  AkashaMainWindow.hpp  DebugConsol.hpp  Win32AkashaApplication.cpp  default.rcd  default_resource.h  elementConstract.lua  main.cpp  plane.rcd  pplane.rcd
Win32Akasha/src/DebugWindow/: DebugWindow.hpp
Win32Akasha/src/InputBridge/: InputBridge.hpp
Win32Akasha/src/LogWindow/: LogList.hpp  LogWindow.hpp
Win32Akasha/src/Network/: ChatListView.hpp  NetworkDialog.hpp  SelectorDialog.hpp
Win32Akasha/src/res/: resource.h  resource.rc
